# IsacxAkhil

./: .gitignore  LOG.md  README.md  activate.bat  activate.ps1  requirements.txt
Robotics/docs/: VISION_PIPELINE.md
configs/: default.yaml
docs/: VISION_PIPELINE.md
docs/decisions/: 001-keypoint-vs-densefusion.md  002-rust-scope.md
docs/results/: README.md
rust/: Cargo.toml
rust/crates/vision-inference/: Cargo.toml
rust/crates/vision-inference/src/: main.rs
scripts/: export_yolo_onnx.py  gpu_stress_test.py  gpu_test.ps1
